--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,12 @@ header {
 header .container {
   background-color: #06131f;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+}
+
+form {
+  display: flex;
 }
 
 header .container img {
@@ -48,10 +52,6 @@ header .container img {
 
 .disc img {
   width: 100%;
-}
-
-.hide {
-  display: none;
 }
 /* RESPONSIVE */
 
